3.4/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-back
  labels:
    app: nginxback
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginxback
  template:
    metadata:
      labels:
        app: nginxback
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080      
      - name: nginx
        image: nginx:1.19
        ports:
        - containerPort: 80
