3.4/deployment_update_fatal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-back
  labels:
    app: nginxback
spec:
  replicas: 5
  strategy:
    rollingUpdate:
      maxSurge: 20%
      maxUnavailable: 20%
  selector:
    matchLabels:
      app: nginxback
  template:
    metadata:
      labels:
        app: nginxback
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080      
      - name: nginx
        image: nginx:1.28
        ports:
        - containerPort: 80
