3.4/nginx-deployment-2.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        version: v2
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 8081
          command: ["nginx", "-g", "daemon off;"]
          volumeMounts:
            - name: config-volume-index
              mountPath: /usr/share/nginx/html
            - name: config-volume-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: config-volume-index
          configMap:
            name: nginx-index-2
        - name: config-volume-config
          configMap:
            name: nginx-config-2
            items:
              - key: nginx.conf
                path: nginx.conf
