3.4/nginx-service-1.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-1
spec:
  selector:
    app: nginx
    version: v1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
