3.4/nginx-service-2.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-2
spec:
  selector:
    app: nginx
    version: v2
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
