3.4/nginx-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: nginx-service-1
            port:
              number: 8080
          weight: 90
        - destination:
            host: nginx-service-2
            port:
              number: 8081
          weight: 10
